Connection Timeout Updated

--- a/Assets/StreamingAssets/client_config.json
+++ b/Assets/StreamingAssets/client_config.json
@@ -4,5 +4,6 @@
 	"ftpsPort": 2222,
 	"ftpsUsername": "moonshot",
 	"ftpsPassword": "rollmug",
-	"stationOverride": ""
+	"stationOverride": "",
+	"connectionTimeout": 5
 }
