Disconnect Handler Bug Fixes
Removed memory leak caused by lastTexture field
Also refactored handler to separate listeners for camera disconnect error and camera warning

--- a/Assets/StreamingAssets/config.json
+++ b/Assets/StreamingAssets/config.json
@@ -37,8 +37,10 @@
     "errorDisplaySettings": {
         "checkForDisconnectInterval": 15,
         "doAttemptCameraRestartIfMissingDevice": true,
-	"doAttemptCameraRestartIfFrozenUpdateCount": true,
+	    "doAttemptCameraRestartIfFrozenUpdateCount": true,
         "refinedScanTimeout": 3.0,
-	"doAttemptCameraRestartIfWrongCamera": true
+        "doAttemptCameraRestartIfWrongCamera": true,
+        "doSaveCurrentAndLastWebCamTexturesToDisk": false,
+        "doVerboseLoggingOfDisconnectHandler": true
     }
 }
