Bug Fix During Documentation
Added try catch block to GetMat method.

Old debug changes from 2023.

--- a/Assets/StreamingAssets/client_config.json
+++ b/Assets/StreamingAssets/client_config.json
@@ -1,5 +1,5 @@
 {
-	"serverAddress": "dev3.sounddev.com",
+	"serverAddress": "192.168.0.245",
 	"port": 26950,
 	"ftpsPort": 2222,
 	"ftpsUsername": "moonshot",
