--- a/Assets/StreamingAssets/config.json
+++ b/Assets/StreamingAssets/config.json
@@ -9,7 +9,9 @@
     "defaultCamera": "HD Pro Webcam C920",
     "flipVertical": true,
     "flipHorizontal": false,
-    "requestedFPS": 60,
+    "requestedFPS": 30,
+    "requestedWidth": 640,
+    "requestedHeight": 480,
     "preProcessingSizeFactor": 2,
     "postProcessingSizeFactor": 0.75,
     "brightness": 255,
